Fixed footer on small screens

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -178,11 +178,11 @@ body {
 
 @media (max-width: 768px) {
     body {
-		margin-bottom: 500px; /* Margin bottom by footer height*/
+		margin-bottom: 600px; /* Margin bottom by footer height*/
 	}
 	
 	.page-footer {
-		height: 500px; /* Set the fixed height of the footer here */
+		height: 580px; /* Set the fixed height of the footer here */
 	}
 	
 }
